@@ -172,7 +172,7 @@ abstract non-sealed class AbstractTeleporter implements Teleporter
 		// if only one normal world exists, return that world
 		if (normalWorlds.size() == 1)
 		{
-			return Optional.of(plugin.worldManager.getSpawnLocation(normalWorlds.get(0)));
+			return Optional.of(plugin.worldManager.getSpawnLocation(normalWorlds.getFirst()));
 		}
 
 		// if no matching normal world found and more than one normal world exists, return passed world spawn location
